<resources>
    <string name="app_name">CS3270A9</string>
    <string name="no_courses">No Courses</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="button_save_course">Save Course</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the course</string>
    <string name="ok">OK</string>
    <string name="error_message">You must enter a course name</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="course_code">Course Code:</string>
    <string name="start_at">Starting Date:</string>
    <string name="end_at">Ending Date:</string>
    <string name="id_hint">ID</string>
    <string name="name_hint">Name</string>
    <string name="course_code_hint">Course Code</string>
    <string name="start_at_hint">Starting Date e.g. 8/1/2015</string>
    <string name="end_at_hint">Ending Date e.g. 12/20/2015</string>
    <string name="save_course">Save Course</string>
    <string name="menuitem_import">Import</string>
    <string name="no_assignments">No Assignments</string>
    <string name="due">Due:</string>
</resources>
