<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.darincritchlow.assignment9.cs3270a9.DetailsFragment"
    android:id="@+id/detailsScrollView">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:id="@+id/txvIdLabel"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/CourseLabelTextView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/txvNameLabel"
            android:layout_row="1"
            android:layout_column="0"
            style="@style/CourseLabelTextView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_code"
            android:id="@+id/txvCourseCodeLabel"
            android:layout_row="2"
            android:layout_column="0"
            style="@style/CourseLabelTextView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_at"
            android:id="@+id/txvStartAtLabel"
            android:layout_row="3"
            android:layout_column="0"
            style="@style/CourseLabelTextView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_at"
            android:id="@+id/txvEndAtLabel"
            android:layout_row="4"
            android:layout_column="0"
            style="@style/CourseLabelTextView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvId"
            android:layout_row="0"
            android:layout_column="1"
            style="@style/CourseTextView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvName"
            android:layout_row="1"
            android:layout_column="1"
            style="@style/CourseTextView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvCourseCode"
            android:layout_row="2"
            android:layout_column="1"
            style="@style/CourseTextView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvStartAt"
            android:layout_row="3"
            android:layout_column="1"
            style="@style/CourseTextView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvEndAt"
            android:layout_row="4"
            android:layout_column="1"
            style="@style/CourseTextView"/>

    </GridLayout>
</ScrollView>
